# shopify-partner-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  analytics.py  pyproject.toml  queries.py  requirements.txt  server.py  shopify_partner.py
.github/workflows/: ci.yml  publish.yml
src/shopify_partner_agent/: __init__.py  client.py  server.py
tests/: test_analytics.py
