[project]
name = "shopify-partner-agent"
version = "0.3.0"
description = "MCP server for Shopify Partner API analytics"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
shopify-partner-agent = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "D100",  # module docstring (already have these)
    "D104",  # package docstring
    "D203",  # no-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (we use next-line style)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "D417",  # missing arg description for ctx (MCP framework param)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
